created endGame function that resets the questions, questionNumber and webpage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button id="start-button" class="btn">Start</button>
 
             <div class="quiz-section hide">
-                <p id="question" class="hide">#</p>
+                <p id="question">#</p>
                 
                 <div class="btn-grid">
                     <button id="option-1" class="option-btn btn">Option 1</button>
