added current score and high score basic logic

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <header class="header">
             <p id="high-score-btn">View High Scores</p>
+            <p id="current-game-score"></p>
             <p>Time</p>
         </header>
 
@@ -40,7 +41,9 @@
         </div>
 
         <div class="highscore-screen hide">
-            This is the highscore screen
+            <h3 id="highscore-heading">High Scores</h3>
+            <p id="display-highscore"></p>
+        
         </div>
     </body>
 </html>
