implemented timer and timer logic, implemented initials capture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <p id="high-score-btn">View High Scores</p>
             <p id="current-game-score"></p>
-            <p>Time</p>
+            <p id="countdown">Countdown: 40s</p>
         </header>
 
 
