everything properly commented and spaced

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
         <div class="highscore-screen hide">
             <h3 id="highscore-heading">High Scores</h3>
-            <p id="display-highscore"></p>
-        
+            <p id="display-highscore-1"></p>
+            <p id="display-highscore-2"></p>
+            <p id="display-highscore-3"></p>
         </div>
     </body>
 </html>
