--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="question-container">
 
-            <button id="start-button" class="btn">Start</button>
+            <button id="start-button" class="btn">START</button>
 
             <div class="quiz-section hide">
                 <p id="question">#</p>
